--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -15,16 +15,16 @@ if(NOT (APPLE)) # CMAKE_BUILD_TYPE_UC STREQUAL "TSAN"
         add_test(NAME "test.sh" COMMAND env DSN=${TEST_DSN} ${CMAKE_CURRENT_SOURCE_DIR}/test.sh)
         add_test(NAME "test.pl" COMMAND perl ${CMAKE_CURRENT_SOURCE_DIR}/test.pl ${TEST_DSN})
         add_test(NAME "test.py" COMMAND ${PYTHON} ${CMAKE_CURRENT_SOURCE_DIR}/test.py ${TEST_DSN})
-        if(ODBC_UNIXODBC AND ISQL)
+        if(ISQL)
             add_test(NAME "isql-default" COMMAND sh -c "echo select ${SQL_QUERY} | ${ISQL} ${TEST_DSN} ${SQL_USER} ${SQL_PASS} | grep ${SQL_ANSWER}")
         endif()
-        if(ODBC_UNIXODBC AND IUSQL)
+        if(IUSQL)
             add_test(NAME "iusql-default" COMMAND sh -c "echo select ${SQL_QUERY} | ${IUSQL} ${TEST_DSN} ${SQL_USER} ${SQL_PASS} | grep ${SQL_ANSWER}")
         endif()
-        if(ODBC_IODBC AND IODBCTEST)
+        if(IODBCTEST)
             add_test(NAME "iodbctest-${SQL_USER}" COMMAND sh -c "echo select ${SQL_QUERY} | ${IODBCTEST} \"DSN=${TEST_DSN};UID=${SQL_USER};PWD=${SQL_PASS}\" | grep ${SQL_ANSWER}")
         endif()
-        if(ODBC_IODBC AND IODBCTESTW)
+        if(IODBCTESTW)
             add_test(NAME "iodbctestw-${SQL_USER}" COMMAND sh -c "echo select ${SQL_QUERY} | ${IODBCTESTW} \"DSN=${TEST_DSN};UID=${SQL_USER};PWD=${SQL_PASS}\" | grep ${SQL_ANSWER}")
         endif()
     endif()
@@ -32,16 +32,16 @@ if(NOT (APPLE)) # CMAKE_BUILD_TYPE_UC STREQUAL "TSAN"
         add_test(NAME "test.sh-w" COMMAND env DSN=${TEST_DSN_W} ${CMAKE_CURRENT_SOURCE_DIR}/test.sh)
         add_test(NAME "test.pl-w" COMMAND perl ${CMAKE_CURRENT_SOURCE_DIR}/test.pl ${TEST_DSN_W})
         add_test(NAME "test.py-w" COMMAND ${PYTHON} ${CMAKE_CURRENT_SOURCE_DIR}/test.py ${TEST_DSN_W})
-        if(ODBC_UNIXODBC AND ISQL)
+        if(ISQL)
             add_test(NAME "isql-${SQL_USER}-w" COMMAND sh -c "echo select ${SQL_QUERY} | ${ISQL} ${TEST_DSN_W} ${SQL_USER} ${SQL_PASS} | grep ${SQL_ANSWER}")
         endif()
-        if(ODBC_UNIXODBC AND IUSQL)
+        if(IUSQL)
             add_test(NAME "iusql-${SQL_USER}-w" COMMAND sh -c "echo select ${SQL_QUERY} | ${IUSQL} ${TEST_DSN_W} ${SQL_USER} ${SQL_PASS} | grep ${SQL_ANSWER}")
         endif()
-        if(ODBC_IODBC AND IODBCTEST)
+        if(IODBCTEST)
             add_test(NAME "iodbctest-${SQL_USER}-w" COMMAND sh -c "echo select ${SQL_QUERY} | ${IODBCTEST} \"DSN=${TEST_DSN_W};UID=${SQL_USER};PWD=${SQL_PASS}\" | grep ${SQL_ANSWER}")
         endif()
-        if(ODBC_IODBC AND IODBCTESTW)
+        if(IODBCTESTW)
             add_test(NAME "iodbctestw-${SQL_USER}-w" COMMAND sh -c "echo select ${SQL_QUERY} | ${IODBCTESTW} \"DSN=${TEST_DSN_W};UID=${SQL_USER};PWD=${SQL_PASS}\" | grep ${SQL_ANSWER}")
         endif()
     endif()
