--- a/driver/odbc.ini
+++ b/driver/odbc.ini
@@ -26,7 +26,7 @@ description = Clickhouse driver
 #certificatefile =
 #calocation =
 
-# Timeout for http queries to ClickHouse server
+# Timeout for http queries to ClickHouse server (default is 30 seconds)
 #timeout=60
 
 #trace=1
