Add timeout to sample config

--- a/driver/odbc.ini
+++ b/driver/odbc.ini
@@ -26,6 +26,9 @@ description = Clickhouse driver
 #certificatefile =
 #calocation =
 
+# Timeout for http queries to ClickHouse server (default is 30 seconds)
+#timeout=60
+
 #trace=1
 #tracefile=/tmp/chlickhouse-odbc.log
 
