--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ endif ()
 include(GNUInstallDirs)
 
 if (NOT MSVC)
-	set (CMAKE_CXX_FLAGS                     "${CMAKE_CXX_FLAGS} -O2 -g -fvisibility-inlines-hidden")
+	set (CMAKE_CXX_FLAGS                     "${CMAKE_CXX_FLAGS} -fvisibility-inlines-hidden")
 endif ()
 if (MSVC)
 	set (CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
