--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,12 @@ compiler:
 cache:
   ccache: true
 
+services:
+  - docker
+
+env:
+  - CLICKHOUSE_SERVER_IMAGE=yandex/clickhouse-server:19.11.8.46
+
 addons:
   apt:
      sources: [ ubuntu-toolchain-r-test ]
@@ -107,8 +113,32 @@ install:
   - if [ "$TRAVIS_OS_NAME" == "linux" ] && [ -n "$ODBC_LIB" ]; then sudo apt-get update -q > build.log 2>&1 || (cat build.log && exit 1); fi
   # Need in binulils bacause /usr/bin/ld: /usr/lib/gcc/x86_64-linux-gnu/8/../../../x86_64-linux-gnu/libodbc.a(logOpen.o): unrecognized relocation (0x2a) in section `.text'
   - if [ "$TRAVIS_OS_NAME" == "linux" ] && [ -n "$ODBC_LIB" ]; then sudo apt-get install -y $ODBC_LIB binutils | tee build.log 2>&1 || (cat build.log && exit 1); fi
+  # TODO: Download image in background to save time
+  - sudo docker pull ${CLICKHOUSE_SERVER_IMAGE}
 
 script:
   - mkdir -p build
   - cd build
   - cmake .. -G Ninja -DCMAKE_CXX_COMPILER=`which $CXX` -DCMAKE_C_COMPILER=`which $CC` $CMAKE_FLAGS && ninja all && ninja test
+
+after_script:
+  # Test against the clickhouse-server:
+  - CLICKHOUSE_SERVER_CONTAINER=$(sudo docker run  -d ${CLICKHOUSE_SERVER_IMAGE})
+  - CLICKHOUSE_SERVER_IP=$(sudo docker inspect -f '{{ .NetworkSettings.IPAddress }}' ${CLICKHOUSE_SERVER_CONTAINER})
+  # TODO: think about paths on windows
+  - ODBC_DRIVER_PATH=$(realpath driver/libclickhouseodbc.so)
+  - ODBC_DRIVERW_PATH=$(realpath driver/libclickhouseodbc.so)
+  - echo "Compose ODBC config"
+  - |
+    cat <<-EOF
+    [clickhouse_localhost]
+    Driver=${ODBC_DRIVER_PATH}
+    url=http://${CLICKHOUSE_SERVER_IP}
+
+    [clickhouse_localhost_w]
+    Driver=${ODBC_DRIVERW_PATH}
+    url=http://${CLICKHOUSE_SERVER_IP}
+    EOF > ~/.odbc.ini
+  - cat ~/.odbc.ini
+  - echo "run tests"
+  - ctest -V
