--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,8 @@ services:
   - docker
 
 env:
-  - CLICKHOUSE_SERVER_IMAGE=yandex/clickhouse-server:19.11.8.46
+  global:
+    - CLICKHOUSE_SERVER_IMAGE=yandex/clickhouse-server:19.11.8.46
 
 addons:
   apt:
@@ -114,6 +115,7 @@ install:
   # Need in binulils bacause /usr/bin/ld: /usr/lib/gcc/x86_64-linux-gnu/8/../../../x86_64-linux-gnu/libodbc.a(logOpen.o): unrecognized relocation (0x2a) in section `.text'
   - if [ "$TRAVIS_OS_NAME" == "linux" ] && [ -n "$ODBC_LIB" ]; then sudo apt-get install -y $ODBC_LIB binutils | tee build.log 2>&1 || (cat build.log && exit 1); fi
   # TODO: Download image in background to save time
+  - echo "Clickhouse image: ${CLICKHOUSE_SERVER_IMAGE}"
   - sudo docker pull ${CLICKHOUSE_SERVER_IMAGE}
 
 script:
