--- a/.travis.yml
+++ b/.travis.yml
@@ -132,15 +132,15 @@ after_script:
   - ODBC_DRIVERW_PATH=$(realpath driver/libclickhouseodbc.so)
   - echo "Compose ODBC config"
   - |
-    cat <<-EOF
-    [clickhouse_localhost]
-    Driver=${ODBC_DRIVER_PATH}
-    url=http://${CLICKHOUSE_SERVER_IP}
+    cat > ~/.odbc.ini <<-EOF
+[clickhouse_localhost]
+Driver=${ODBC_DRIVER_PATH}
+url=http://${CLICKHOUSE_SERVER_IP}
 
-    [clickhouse_localhost_w]
-    Driver=${ODBC_DRIVERW_PATH}
-    url=http://${CLICKHOUSE_SERVER_IP}
-    EOF > ~/.odbc.ini
+[clickhouse_localhost_w]
+Driver=${ODBC_DRIVERW_PATH}
+url=http://${CLICKHOUSE_SERVER_IP}
+EOF
   - cat ~/.odbc.ini
   - echo "run tests"
   - ctest -V
