--- a/.travis.yml
+++ b/.travis.yml
@@ -55,7 +55,7 @@ matrix:
           addons:
             apt:
               sources: [ ubuntu-toolchain-r-test ]
-              packages: [ ninja-build, libstdc++-8-dev, iodbc, libiodbc2-dev, libiodbc2 ]
+              packages: [ ninja-build, libstdc++-8-dev, libiodbc2-dev, libiodbc2 ]
 
         # gcc8 iodbc
         - os: linux
@@ -63,7 +63,7 @@ matrix:
           addons:
             apt:
               sources: [ ubuntu-toolchain-r-test ]
-              packages: [ ninja-build, gcc-8, g++-8, iodbc, libiodbc2-dev, libiodbc2 ]
+              packages: [ ninja-build, gcc-8, g++-8, libiodbc2-dev, libiodbc2 ]
 
         # clang8 unixodbc
         #- os: linux
@@ -88,7 +88,7 @@ matrix:
           addons:
             apt:
               sources: [ ubuntu-toolchain-r-test ]
-              packages: [ ninja-build, gcc-7, g++-7, unixodbc]
+              packages: [ ninja-build, gcc-7, g++-7]
 
         - os: osx
           env: MATRIX_EVAL="export HOMEBREW_PACKAGES='libiodbc'" 
@@ -112,9 +112,7 @@ matrix:
 before_install:
   # brew update is to mitigate Travis error "Error: Your Homebrew is outdated. Please run `brew update`."
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install ninja ${HOMEBREW_PACKAGES}; fi
-  # docker is not supported on OSX in Travis
-  - if [[ "$TRAVIS_OS_NAME" != "osx" ]]; then echo "Clickhouse image ${CLICKHOUSE_SERVER_IMAGE}"; docker pull ${CLICKHOUSE_SERVER_IMAGE}; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then echo "installing ninja + ${HOMEBREW_PACKAGES}"; brew install ninja ${HOMEBREW_PACKAGES}; fi
 
 install:
   - eval "${MATRIX_EVAL}"
@@ -129,7 +127,11 @@ script:
   - cmake .. -G Ninja -DCMAKE_CXX_COMPILER=`which $CXX` -DCMAKE_C_COMPILER=`which $CC` $CMAKE_FLAGS -DTEST_DSN=clickhouse_localhost -DTEST_DSN_W=clickhouse_localhost_w && cmake --build . --target all
 
 after_script:
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then echo "Unable to test on OSX since docker is not supported on Travis OSX agents. "; exit 0; fi
+  - if [ "$TRAVIS_OS_NAME" == "osx" ]; then echo "Unable to test on OSX since docker is not supported on Travis OSX agents."; exit ${TRAVIS_TEST_RESULT}; fi
+  # TODO: install Perl (DBI::ODBC) and Python (pyodbc) dependencies
+  - sudo apt install python-pip; pip install pyodbc
+  - sudo apt install unixodbc
+  - echo "Clickhouse image ${CLICKHOUSE_SERVER_IMAGE}"; docker pull ${CLICKHOUSE_SERVER_IMAGE}; fi
   # Test against the clickhouse-server:
   - CLICKHOUSE_SERVER_CONTAINER=$(docker run  -d ${CLICKHOUSE_SERVER_IMAGE})
   - CLICKHOUSE_SERVER_IP=$(docker inspect -f '{{ .NetworkSettings.IPAddress }}' ${CLICKHOUSE_SERVER_CONTAINER})
