--- a/.travis.yml
+++ b/.travis.yml
@@ -109,13 +109,11 @@ matrix:
         - os: osx
           compiler: gcc
 
-before_install:
-  # brew update is to mitigate Travis error "Error: Your Homebrew is outdated. Please run `brew update`."
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then echo "installing ninja + ${HOMEBREW_PACKAGES}"; brew install ninja ${HOMEBREW_PACKAGES}; fi
-
 install:
   - eval "${MATRIX_EVAL}"
+    # brew update is to mitigate Travis error "Error: Your Homebrew is outdated. Please run `brew update`."
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then echo "installing ninja + ${HOMEBREW_PACKAGES}"; brew install ninja ${HOMEBREW_PACKAGES}; fi
   - if [ "$TRAVIS_OS_NAME" == "linux" ] && [ -n "$ODBC_LIB" ]; then sudo apt-add-repository "deb http://archive.ubuntu.com/ubuntu bionic main universe"; fi
   - if [ "$TRAVIS_OS_NAME" == "linux" ] && [ -n "$ODBC_LIB" ]; then sudo apt-get update -q > build.log 2>&1 || (cat build.log && exit 1); fi
   # Need in binulils because /usr/bin/ld: /usr/lib/gcc/x86_64-linux-gnu/8/../../../x86_64-linux-gnu/libodbc.a(logOpen.o): unrecognized relocation (0x2a) in section `.text'
@@ -129,7 +127,7 @@ script:
 after_script:
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then echo "Unable to test on OSX since docker is not supported on Travis OSX agents."; exit ${TRAVIS_TEST_RESULT}; fi
   # TODO: install Perl (DBI::ODBC) and Python (pyodbc) dependencies
-  - sudo apt install python-pip; pip install pyodbc
+  - sudo apt install python-pip unixodbc-dev; pip install pyodbc
   - sudo apt install unixodbc
   - echo "Clickhouse image ${CLICKHOUSE_SERVER_IMAGE}"; docker pull ${CLICKHOUSE_SERVER_IMAGE}; fi
   # Test against the clickhouse-server:
