--- a/.travis.yml
+++ b/.travis.yml
@@ -129,7 +129,7 @@ script:
 after_script:
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then echo "Unable to test on OSX since docker is not supported on Travis OSX agents."; exit ${TRAVIS_TEST_RESULT}; fi
   # TODO: install Perl (DBI::ODBC) and Python (pyodbc) dependencies
-  - sudo apt install python-pip unixodbc-dev; sudo pip install pyodbc
+  - sudo apt install python-pip unixodbc-dev python-dev; sudo pip install pyodbc
   - sudo apt install unixodbc
   - echo "Clickhouse image ${CLICKHOUSE_SERVER_IMAGE}"; docker pull ${CLICKHOUSE_SERVER_IMAGE}; fi
   # Test against the clickhouse-server:
