--- a/.travis.yml
+++ b/.travis.yml
@@ -123,11 +123,11 @@ script:
   - mkdir -p build
   - cd build
   - cmake .. -G Ninja -DCMAKE_CXX_COMPILER=`which $CXX` -DCMAKE_C_COMPILER=`which $CC` $CMAKE_FLAGS -DTEST_DSN=clickhouse_localhost -DTEST_DSN_W=clickhouse_localhost_w && cmake --build . --target all
-  # Run unit-tests only
+  # unit-tests
   - ctest -R '.*-ut.*'
-
-after_script:
+  # more complicated tests
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then echo "Unable to test on OSX since docker is not supported on Travis OSX agents."; exit ${TRAVIS_TEST_RESULT}; fi
+  # Setting up test prerequisites: docker, pyodbc, odbc module for perl, isql (or iusql or other)
   # TODO: install Perl (DBI::ODBC) and Python (pyodbc) dependencies
   - sudo apt install python-pip unixodbc-dev python-dev; sudo pip install pyodbc
   - sudo apt install unixodbc
@@ -148,6 +148,5 @@ after_script:
     Driver=${ODBC_DRIVERW_PATH}
     url=http://${CLICKHOUSE_SERVER_IP}
     EOF
-  - cat ~/.odbc.ini
-  - echo "run tests"
+  - echo "Staring tests..."
   - ctest -V
