--- a/.travis.yml
+++ b/.travis.yml
@@ -128,9 +128,8 @@ script:
   # more complicated tests
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then echo "Unable to test on OSX since docker is not supported on Travis OSX agents."; exit ${TRAVIS_TEST_RESULT}; fi
   # Setting up test prerequisites: docker, pyodbc, odbc module for perl, isql (or iusql or other)
-  # TODO: install Perl (DBI::ODBC) and Python (pyodbc) dependencies
-  - sudo apt install python-pip unixodbc-dev python-dev; sudo pip install pyodbc
-  - sudo apt install unixodbc
+  - sudo apt install perl libdbi-perl libdbd-odbc-perl python-pip unixodbc unixodbc-dev python-dev
+  - sudo pip install pyodbc
   # To simplify things a bit, start ClickHouse server in docker
   - echo "Clickhouse image ${CLICKHOUSE_SERVER_IMAGE}"; docker pull ${CLICKHOUSE_SERVER_IMAGE}; fi
   - CLICKHOUSE_SERVER_CONTAINER=$(docker run  -d ${CLICKHOUSE_SERVER_IMAGE})
