--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: cpp
+dist: bionic
 
 os:
   - linux
@@ -134,9 +135,9 @@ script:
   # more complicated tests
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then echo "Unable to test on OSX since docker is not supported on Travis OSX agents."; exit ${TRAVIS_TEST_RESULT}; fi
   # Setting up test prerequisites: docker, pyodbc, odbc module for perl, isql (or iusql or other)
-  - sudo apt install perl libdbi-perl libdbd-odbc-perl python-pip unixodbc unixodbc-dev python-dev
+  - sudo apt install -y perl libdbi-perl libdbd-odbc-perl python-pyodbc unixodbc unixodbc-dev
   # Using absolute path to compiler to fix setup.py issue of pyodbc: unable to execute 'clang': No such file or directory
-  - sudo CC=`which $CC` CXX=`which $CXX` pip install pyodbc -V --disable-pip-version-check
+  #- sudo CC=`which $CC` CXX=`which $CXX` pip install pyodbc -V --disable-pip-version-check
   # To simplify things a bit, start ClickHouse server in docker
   - echo "Clickhouse image ${CLICKHOUSE_SERVER_IMAGE}";
   - docker pull ${CLICKHOUSE_SERVER_IMAGE}
@@ -146,7 +147,7 @@ script:
   - docker stats -a --no-stream
   # TODO: think about paths on windows
   - ODBC_DRIVER_PATH=$(realpath driver/libclickhouseodbc.so)
-  - ODBC_DRIVERW_PATH=$(realpath driver/libclickhouseodbc.so)
+  - ODBC_DRIVERW_PATH=$(realpath driver/libclickhouseodbcw.so)
   - echo "Compose ODBC config"
   - |
     cat > ~/.odbc.ini <<-EOF
