Use typical default password for tests

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,7 +8,7 @@ if(NOT (APPLE)) # CMAKE_BUILD_TYPE_UC STREQUAL "TSAN"
     message(STATUS "Testing with: TEST_DSN=${TEST_DSN} TEST_DSN_W=${TEST_DSN_W} ISQL=${ISQL} IODBCTEST=${IODBCTEST} IODBCTESTW=${IODBCTESTW}")
 
     set(SQL_USER default CACHE STRING "")
-    set(SQL_PASS "" CACHE STRING "")
+    set(SQL_PASS password CACHE STRING "")
     set(SQL_QUERY "123456+456789" CACHE STRING "")
     set(SQL_ANSWER "580245" CACHE STRING "")
     if (TEST_DSN)
