--- a/driver/odbc.ini
+++ b/driver/odbc.ini
@@ -1,37 +1,42 @@
 # Place this file to ~/.odbc.ini or /etc/odbc.ini
 
 [ODBC Data Sources]
-clickhouse_localhost = Clickhouse
-clickhouse_localhost_w = Clickhouse_w
+ClickHouseDSN_localhost = ClickHouseDriver
+ClickHouseDSNW_localhost = ClickHouseDriverW
 
-# Ansi
-[clickhouse_localhost]
-driver = Clickhouse
-description = Clickhouse driver
-# New all-in one way to specify connection with [optional] settings:
+[ClickHouseDSN_localhost]
+Driver = ClickHouseDriver
+Description = DSN for ClickHouse ANSI Driver (localhost)
+
+### New all-in one way to specify connection with [optional] settings:
 #url = https://default:password@localhost:8443/query?database=default&max_result_bytes=4000000&buffer_size=3000000
-# Minimal (will connect to port 8443 if https:// or 8123 if http:// ):
+
+# ...or minimal (will connect to port 8443 if https:// or 8123 if http:// ):
 #url = https://localhost
 
-# Old way:
+### Old way:
 #server = localhost
 #database = default
 #uid = default
+#pwd = password
 #port = 8123
 #proto = http
 
-# sslmode variants: allow - ignore self-signed and bad certificates; require - check certificates (and fail connection if something wrong)
+# Timeout for http queries to ClickHouse server (default is 30 seconds)
+#timeout=60
+
+# sslmode:
+#   allow   - ignore self-signed and bad certificates
+#   require - check certificates (and fail connection if something wrong)
 #sslmode = require
 #privatekeyfile =
 #certificatefile =
 #calocation =
 
-# Timeout for http queries to ClickHouse server (default is 30 seconds)
-#timeout=60
-
 #trace=1
 #tracefile=/tmp/chlickhouse-odbc.log
 
-# Unicode
-[clickhouse_localhost_w]
-driver = Clickhouse_w
+[ClickHouseDSNW_localhost]
+Driver = ClickHouseDriverW
+Description = DSN for ClickHouse Unicode Driver (localhost)
+# ...
