--- a/driver/unixodbc.ini
+++ b/driver/unixodbc.ini
@@ -1,15 +1,17 @@
 # Place this file to ~/.odbcinst.ini or /etc/odbcinst.ini
 
 [ODBC Drivers]
-Clickhouse = Installed
-Clickhouse_w = Installed
+ClickHouseDriver = Installed
+ClickHouseDriverW = Installed
 
-[Clickhouse]
-Description = Clickhouse ANSI ODBC Driver
+[ClickHouseDriver]
+Description = ClickHouse ANSI ODBC Driver
 Driver      = libclickhouseodbc.so
 Setup       = libclickhouseodbc.so
+UsageCount  = 1
 
-[Clickhouse_w]
-Description = Clickhouse UNICODE ODBC Driver
+[ClickHouseDriverW]
+Description = ClickHouse Unicode ODBC Driver
 Driver      = libclickhouseodbcw.so
 Setup       = libclickhouseodbcw.so
+UsageCount  = 1
