--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED 1)
 set(CMAKE_POSITION_INDEPENDENT_CODE 1)
 set(CMAKE_BUILD_COLOR_MAKEFILE 1)
 set(CMAKE_DEBUG_POSTFIX "") # Dont add "d" to target lib name
-
+set(CMAKE_INSTALL_DEFAULT_COMPONENT_NAME Driver)
 
 message (STATUS "CMAKE_BUILD_TYPE: ${CMAKE_BUILD_TYPE}")
 
@@ -121,7 +121,7 @@ message (STATUS "Using odbc: ${ODBC_INCLUDE_DIRECTORIES} : ${ODBC_LIBRARIES}")
 
 message (STATUS "Building for: ${CMAKE_SYSTEM} ${CMAKE_SYSTEM_PROCESSOR} ${CMAKE_LIBRARY_ARCHITECTURE} ; CCACHE=${CCACHE_FOUND} ${CCACHE_VERSION}")
 
-add_subdirectory (contrib)
+add_subdirectory (contrib EXCLUDE_FROM_ALL)
 add_subdirectory (driver)
 
 if(CLICKHOUSE_ODBC_TEST)
@@ -129,3 +129,33 @@ if(CLICKHOUSE_ODBC_TEST)
 endif()
 
 include (cmake/print_flags.cmake)
+
+if(WIN32 AND NOT UNIX)
+    set(CPACK_GENERATOR "ZIP;WIX")
+elseif(APPLE)
+    set(CPACK_GENERATOR "TXZ")
+elseif(UNIX_RHEL OR UNIX_FEDORA)
+    set(CPACK_GENERATOR "TXZ;RPM")
+elseif(UNIX_DEBIAN OR UNIX_UBUNTU)
+    set(CPACK_GENERATOR "TXZ;DEB")
+else()
+    set(CPACK_GENERATOR "TGZ")
+endif()
+
+if(WIN32 AND NOT UNIX)
+    set(CPACK_PACKAGE_INSTALL_DIRECTORY "${PROJECT_NAME}")
+else()
+    set(CPACK_PACKAGE_INSTALL_DIRECTORY "/usr/local")
+endif()
+
+file(COPY "${PROJECT_SOURCE_DIR}/LICENSE" DESTINATION "${PROJECT_BINARY_DIR}")
+file(RENAME "${PROJECT_BINARY_DIR}/LICENSE" "${PROJECT_BINARY_DIR}/LICENSE.txt")
+
+set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "ClickHouse ODBC Driver")
+set(CPACK_PACKAGE_VENDOR "ClickHouse")
+set(CPACK_PACKAGE_DESCRIPTION_FILE "${PROJECT_SOURCE_DIR}/README.md")
+set(CPACK_RESOURCE_FILE_LICENSE "${PROJECT_BINARY_DIR}/LICENSE.txt")
+set(CPACK_PACKAGE_HOMEPAGE_URL "https://github.com/ClickHouse/clickhouse-odbc")
+set(CPACK_MONOLITHIC_INSTALL 1)
+
+include(CPack)
