--- a/driver/config_cmake.h.in
+++ b/driver/config_cmake.h.in
@@ -1,5 +1,12 @@
 #pragma once
 
+#define VERSION_MAJOR @PROJECT_VERSION_MAJOR@
+#define VERSION_MINOR @PROJECT_VERSION_MINOR@
+#define VERSION_PATCH @PROJECT_VERSION_PATCH@
+#define VERSION_TWEAK @PROJECT_VERSION_TWEAK@
+#define VERSION_EXTRA ""
+#define VERSION_STRING "@PROJECT_VERSION@"
+
 #cmakedefine01 USE_SSL
 #cmakedefine01 USE_DEBUG_17
 #cmakedefine01 ODBC_WCHAR
