--- a/driver/escaping/CMakeLists.txt
+++ b/driver/escaping/CMakeLists.txt
@@ -3,4 +3,5 @@ add_library(clickhouse-odbc-escaping
     lexer.cpp
 )
 
-target_include_directories(clickhouse-odbc-escaping PUBLIC ..)
+target_include_directories(clickhouse-odbc-escaping PUBLIC ${PROJECT_BINARY_DIR}/driver)
+target_include_directories(clickhouse-odbc-escaping PUBLIC ${PROJECT_SOURCE_DIR}/driver)
