--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,51 +1,84 @@
 if(NOT (APPLE)) # CMAKE_BUILD_TYPE_UC STREQUAL "TSAN"
+    find_program(PERL perl)
     find_program(PYTHON python2 python python3)
     find_program(ISQL isql)
     find_program(IUSQL iusql)
     find_program(IODBCTEST iodbctest)
     find_program(IODBCTESTW iodbctestw)
+    find_program(SQLCMD sqlcmd)
 
-    message(STATUS "Testing with: TEST_DSN=${TEST_DSN} TEST_DSN_W=${TEST_DSN_W} ISQL=${ISQL} IODBCTEST=${IODBCTEST} IODBCTESTW=${IODBCTESTW}")
+    message(STATUS "Testing with: TEST_DSN=${TEST_DSN} TEST_DSN_W=${TEST_DSN_W} PERL=${PERL} PYTHON=${PYTHON} ISQL=${ISQL} IUSQL=${IUSQL} IODBCTEST=${IODBCTEST} IODBCTESTW=${IODBCTESTW} SQLCMD=${SQLCMD}")
 
     set(SQL_USER default CACHE STRING "")
     set(SQL_PASS password CACHE STRING "")
     set(SQL_QUERY "123456+456789" CACHE STRING "")
     set(SQL_ANSWER "580245" CACHE STRING "")
+
     if (TEST_DSN)
-        add_test(NAME "test.sh" COMMAND env DSN=${TEST_DSN} ${CMAKE_CURRENT_SOURCE_DIR}/test.sh)
-        add_test(NAME "test.pl" COMMAND perl ${CMAKE_CURRENT_SOURCE_DIR}/test.pl ${TEST_DSN})
-        add_test(NAME "test.py" COMMAND ${PYTHON} ${CMAKE_CURRENT_SOURCE_DIR}/test.py ${TEST_DSN})
-        if(ISQL)
-            add_test(NAME "isql-default" COMMAND sh -c "echo select ${SQL_QUERY} | ${ISQL} ${TEST_DSN} ${SQL_USER} ${SQL_PASS} | grep ${SQL_ANSWER}")
+        if (ODBC_UNIXODBC)
+            if(PERL)
+                add_test(NAME "test.pl-a-a" COMMAND ${PERL} ${CMAKE_CURRENT_SOURCE_DIR}/test.pl ${TEST_DSN} a)
+                add_test(NAME "test.pl-w-a" COMMAND ${PERL} ${CMAKE_CURRENT_SOURCE_DIR}/test.pl ${TEST_DSN} w)
+            endif()
+            if(PYTHON)
+                add_test(NAME "test.py-a-a" COMMAND ${PYTHON} ${CMAKE_CURRENT_SOURCE_DIR}/test.py ${TEST_DSN} a)
+                add_test(NAME "test.py-w-a" COMMAND ${PYTHON} ${CMAKE_CURRENT_SOURCE_DIR}/test.py ${TEST_DSN} w)
+            endif()
+            if(ISQL)
+                add_test(NAME "isql-a" COMMAND sh -c "echo select ${SQL_QUERY} | ${ISQL} ${TEST_DSN} ${SQL_USER} ${SQL_PASS} | grep ${SQL_ANSWER}")
+                add_test(NAME "test.sh-isql-a" COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/test.sh ${ISQL} ${TEST_DSN} ${SQL_USER} ${SQL_PASS} -v -b)
+            endif()
+            if(IUSQL)
+                add_test(NAME "iusql-a" COMMAND sh -c "echo select ${SQL_QUERY} | ${IUSQL} ${TEST_DSN} ${SQL_USER} ${SQL_PASS} | grep ${SQL_ANSWER}")
+                add_test(NAME "test.sh-iusql-a" COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/test.sh ${IUSQL} ${TEST_DSN} ${SQL_USER} ${SQL_PASS} -v -b)
+            endif()
         endif()
-        if(IUSQL)
-            add_test(NAME "iusql-default" COMMAND sh -c "echo select ${SQL_QUERY} | ${IUSQL} ${TEST_DSN} ${SQL_USER} ${SQL_PASS} | grep ${SQL_ANSWER}")
-        endif()
-        if(IODBCTEST)
-            add_test(NAME "iodbctest-${SQL_USER}" COMMAND sh -c "echo select ${SQL_QUERY} | ${IODBCTEST} \"DSN=${TEST_DSN};UID=${SQL_USER};PWD=${SQL_PASS}\" | grep ${SQL_ANSWER}")
-        endif()
-        if(IODBCTESTW)
-            add_test(NAME "iodbctestw-${SQL_USER}" COMMAND sh -c "echo select ${SQL_QUERY} | ${IODBCTESTW} \"DSN=${TEST_DSN};UID=${SQL_USER};PWD=${SQL_PASS}\" | grep ${SQL_ANSWER}")
-        endif()
+
+        if (ODBC_IODBC)
+            if(IODBCTEST)
+                add_test(NAME "iodbctest-a" COMMAND sh -c "echo select ${SQL_QUERY} | ${IODBCTEST} \"DSN=${TEST_DSN};UID=${SQL_USER};PWD=${SQL_PASS}\" | grep ${SQL_ANSWER}")
+                add_test(NAME "test.sh-iodbctest-a" COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/test.sh ${IODBCTEST} "DSN=${TEST_DSN};UID=${SQL_USER};PWD=${SQL_PASS}")
+            endif()
+            if(IODBCTESTW)
+                add_test(NAME "iodbctestw-a" COMMAND sh -c "echo select ${SQL_QUERY} | ${IODBCTESTW} \"DSN=${TEST_DSN};UID=${SQL_USER};PWD=${SQL_PASS}\" | grep ${SQL_ANSWER}")
+                add_test(NAME "test.sh-iodbctestw-a" COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/test.sh ${IODBCTESTW} "DSN=${TEST_DSN};UID=${SQL_USER};PWD=${SQL_PASS}")
+            endif()
+        endif ()
     endif()
+
     if (TEST_DSN_W)
-        add_test(NAME "test.sh-w" COMMAND env DSN=${TEST_DSN_W} ${CMAKE_CURRENT_SOURCE_DIR}/test.sh)
-        add_test(NAME "test.pl-w" COMMAND perl ${CMAKE_CURRENT_SOURCE_DIR}/test.pl ${TEST_DSN_W})
-        add_test(NAME "test.py-w" COMMAND ${PYTHON} ${CMAKE_CURRENT_SOURCE_DIR}/test.py ${TEST_DSN_W})
-        if(ISQL)
-            add_test(NAME "isql-${SQL_USER}-w" COMMAND sh -c "echo select ${SQL_QUERY} | ${ISQL} ${TEST_DSN_W} ${SQL_USER} ${SQL_PASS} | grep ${SQL_ANSWER}")
+        if (ODBC_UNIXODBC)
+            if(PERL)
+                add_test(NAME "test.pl-a-w" COMMAND ${PERL} ${CMAKE_CURRENT_SOURCE_DIR}/test.pl ${TEST_DSN_W} a)
+                add_test(NAME "test.pl-w-w" COMMAND ${PERL} ${CMAKE_CURRENT_SOURCE_DIR}/test.pl ${TEST_DSN_W} w)
+            endif()
+            if(PYTHON)
+                add_test(NAME "test.py-a-w" COMMAND ${PYTHON} ${CMAKE_CURRENT_SOURCE_DIR}/test.py ${TEST_DSN_W} a)
+                add_test(NAME "test.py-w-w" COMMAND ${PYTHON} ${CMAKE_CURRENT_SOURCE_DIR}/test.py ${TEST_DSN_W} w)
+            endif()
+            if(ISQL)
+                add_test(NAME "isql-w" COMMAND sh -c "echo select ${SQL_QUERY} | ${ISQL} ${TEST_DSN_W} ${SQL_USER} ${SQL_PASS} | grep ${SQL_ANSWER}")
+                add_test(NAME "test.sh-isql-w" COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/test.sh ${ISQL} ${TEST_DSN_W} ${SQL_USER} ${SQL_PASS} -v -b)
+            endif()
+            if(IUSQL)
+                add_test(NAME "iusql-w" COMMAND sh -c "echo select ${SQL_QUERY} | ${IUSQL} ${TEST_DSN_W} ${SQL_USER} ${SQL_PASS} | grep ${SQL_ANSWER}")
+                add_test(NAME "test.sh-iusql-w" COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/test.sh ${IUSQL} ${TEST_DSN_W} ${SQL_USER} ${SQL_PASS} -v -b)
+            endif()
         endif()
-        if(IUSQL)
-            add_test(NAME "iusql-${SQL_USER}-w" COMMAND sh -c "echo select ${SQL_QUERY} | ${IUSQL} ${TEST_DSN_W} ${SQL_USER} ${SQL_PASS} | grep ${SQL_ANSWER}")
-        endif()
-        if(IODBCTEST)
-            add_test(NAME "iodbctest-${SQL_USER}-w" COMMAND sh -c "echo select ${SQL_QUERY} | ${IODBCTEST} \"DSN=${TEST_DSN_W};UID=${SQL_USER};PWD=${SQL_PASS}\" | grep ${SQL_ANSWER}")
-        endif()
-        if(IODBCTESTW)
-            add_test(NAME "iodbctestw-${SQL_USER}-w" COMMAND sh -c "echo select ${SQL_QUERY} | ${IODBCTESTW} \"DSN=${TEST_DSN_W};UID=${SQL_USER};PWD=${SQL_PASS}\" | grep ${SQL_ANSWER}")
+
+        if (ODBC_IODBC)
+            if(IODBCTEST)
+                add_test(NAME "iodbctest-w" COMMAND sh -c "echo select ${SQL_QUERY} | ${IODBCTEST} \"DSN=${TEST_DSN_W};UID=${SQL_USER};PWD=${SQL_PASS}\" | grep ${SQL_ANSWER}")
+                add_test(NAME "test.sh-iodbctest-w" COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/test.sh ${IODBCTEST} "DSN=${TEST_DSN_W};UID=${SQL_USER};PWD=${SQL_PASS}")
+            endif()
+            if(IODBCTESTW)
+                add_test(NAME "iodbctestw-w" COMMAND sh -c "echo select ${SQL_QUERY} | ${IODBCTESTW} \"DSN=${TEST_DSN_W};UID=${SQL_USER};PWD=${SQL_PASS}\" | grep ${SQL_ANSWER}")
+                add_test(NAME "test.sh-iodbctestw-w" COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/test.sh ${IODBCTESTW} "DSN=${TEST_DSN_W};UID=${SQL_USER};PWD=${SQL_PASS}")
+            endif()
         endif()
     endif()
-    if(COMMAND sqlcmd) # MS SQL server need change server in file:
-        add_test(NAME "sqlcmd" COMMAND sqlcmd -i ${CMAKE_CURRENT_SOURCE_DIR}/mssql.linked.server.sql)
+
+    if(SQLCMD) # MS SQL server need change server in file:
+        add_test(NAME "sqlcmd" COMMAND ${SQLCMD} -i ${CMAKE_CURRENT_SOURCE_DIR}/mssql.linked.server.sql)
     endif()
 endif()
